--- a/index.html
+++ b/index.html
@@ -7,33 +7,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Krishna profile</title>
     <link href="oo/k.png" rel="icon"></a>
+    <link rel="stylesheet" href="styl.css">
 </head>
 
 <body bgcolor="lavender">
     <header>
-        <center>
-            <h1><b><u>KRISHNA &dagger; PROFILE </u></b></h1>
-
-        </center>
-        <center><img src="oo/KRISHNA (2).jpg" width="180" alt="img"></center>
-
-    </header>
+<div id="headall ">
+<div id="son"> <h1 style="margin: auto;">&Dagger;&Kopf;&ropf;&iopf;&sopf;&hopf;&nopf;&aopf;&zigrarr;&popf;&ropf;&oopf;&fopf;&iopf;&lopf;&eopf;&Dagger;</h1></div>
+<div id="daughter"> <center><img src="oo/KRISHNA (2).jpg" width="180" alt="img" style="
+    border-style: outset;
+    border-bottom-left-radius: 20%;
+    border-top-right-radius: 20%;
+"></center></div>
+</div>  
+          <!-- KRISHNA &dagger; PROFILE -->
+       <!-- <img src="oo/KRISHNA (2).jpg" width="180" alt="img"> -->
+     </header>
     <hr>
     <main>
-        <div>
-            <center>
-                <h2><b><u>ABOUT&dagger; MYSELF</u></b></h2>
-            </center>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus sapiente, nemo earum consequuntur
+        <div id="myself">
+            <!-- <div id="topic"><h2><b><u>ABOUT&dagger; MYSELF</u></b></h2></div> -->
+           <div id="h1"> 
+                <h2><b>&Mopf;.&Yopf;.&Sopf;.&Eopf;.&Lopf;.&Fopf;</b></h2>
+                
+            </div>
+        
+            <div id="para"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus sapiente, nemo earum consequuntur
                 vitae dignissimos sequi, quod, voluptas sit dolorum libero sunt. Veritatis temporibus, accusantium vitae
                 repellendus porro tempore pariatur, error doloribus eius unde sunt dolor eligendi, enim obcaecati
-                sapiente distinctio vero quaerat harum suscipit? Temporibus officiis omnis quis repellendus?</p>
+                sapiente distinctio vero quaerat harum suscipit? Temporibus officiis omnis quis repellendus?</p></div>
 
         </div>
         <hr>
         <div>
-            <center>
-                <h3><b><u>SKILLS</u></b></h3>
+            <center style="width: 51%;
+            margin-left: 24%;">
+                <h3 style="font-size: 31px; margin-top: 8px;
+             "><b><u>&Sopf;.&Kopf;.&Iopf;.&Lopf;.&Lopf;.&Sopf;</u></b></h3>
             </center>
             <center>
                 <img src="pp/github (1).png" width="100" height="100" alt="">
@@ -61,7 +71,7 @@
                     alt="facebook"></a>
             <a href="https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=&cad=rja&uact=8&ved=2ahUKEwiI_pGztqX6AhXd7jgGHRFaCAwQFnoECAwQAQ&url=https%3A%2F%2Fwww.youtube.com%2Fchannel%2FUCKdY9OX6qsDKaRikdoM14iw&usg=AOvVaw0Tvp1UikzuCu59kibItuFa"
                 target="_new"><img src="oo/youtube.png" width="30" height="30" alt="youtube"></a>
-            <a href="http://wattsapp.com" target="_new"><img src="oo/whatsapp.png" width="30" height="30"
+            <a href="https://www.whatsapp.com" target="_new"><img src="oo/whatsapp.png" width="30" height="30"
                     alt="wattsapp"></a>
             <a href="http://twitter.com" target="_new"><img src="oo/twitter.png" width="30" height="30"
                     alt="twitter"></a>
@@ -69,7 +79,8 @@
 
     </main>
     <footer>
-        <center><b> All Right Reserved By Krishna Internship LTD.&copy; </b></center>
+        <center><b style="font-family: fantasy;
+            word-spacing: 5px;"> All Right Reserved By Krishna Internship LTD.&trade; </b></center>
     </footer>
 
 </body>
