--- a/practice.html
+++ b/practice.html
@@ -20,11 +20,11 @@
             <div>
               <center><h2><b><u>A quick glance bout me</u></b></h2></center> 
                 <br>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, quibusdam ab molestiae
+               <p id="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, quibusdam ab molestiae
                 perspiciatis sequi necessitatibus labore ipsa asperiores. Fugiat numquam eaque sed doloribus
                 reprehenderit aspernatur blanditiis veniam eveniet? Saepe eveniet quibusdam quo labore porro. Molestias,
                 tempore eveniet porro totam beatae earum asperiores illo saepe expedita ut vel, ab repellendus
-                doloribus?
+                doloribus?</p> 
             </div>
             <div>
                 <ol><b><u>Skills</u></b></ol>
