--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body bgcolor="lavender">
     <header>
 <div id="headall ">
-<div id="son"> <h1 style="margin: auto;">&Dagger;&Kopf;&ropf;&iopf;&sopf;&hopf;&nopf;&aopf;&zigrarr;&popf;&ropf;&oopf;&fopf;&iopf;&lopf;&eopf;&Dagger;</h1></div>
+<div id="son"> <h1 style="margin: auto;">&Kopf;&ropf;&iopf;&sopf;&hopf;&nopf;&aopf;&zigrarr;&popf;&ropf;&oopf;&fopf;&iopf;&lopf;&eopf;</h1></div>
 <div id="daughter"> <center><img src="oo/KRISHNA (2).jpg" width="180" alt="img" style="
     border-style: outset;
     border-bottom-left-radius: 20%;
