--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body bgcolor="lavender">
     <header>
 <div id="headall ">
-<div id="son"> <h1 style="margin: auto;">&Kopf;&ropf;&iopf;&sopf;&hopf;&nopf;&aopf;&zigrarr;&popf;&ropf;&oopf;&fopf;&iopf;&lopf;&eopf;</h1></div>
+<!-- <div id="son"> <h1 style="margin: auto;">&Kopf;&ropf;&iopf;&sopf;&hopf;&nopf;&aopf;&zigrarr;&popf;&ropf;&oopf;&fopf;&iopf;&lopf;&eopf;</h1></div> -->
+<div id="son"> <h1 style="margin: auto;">KRISHNA PROFILE</h1></div>
 <div id="daughter"> <center><img src="oo/KRISHNA (2).jpg" width="180" alt="img" style="
     border-style: outset;
     border-bottom-left-radius: 20%;
@@ -28,12 +29,12 @@
         <div id="myself">
             <!-- <div id="topic"><h2><b><u>ABOUT&dagger; MYSELF</u></b></h2></div> -->
            <div id="h1"> 
-                <h2><b>&Mopf;.&Yopf;.&Sopf;.&Eopf;.&Lopf;.&Fopf;</b></h2>
+                <h2><b>MYSELF</b></h2>
                 
             </div>
         
             <div id="para"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus sapiente, nemo earum consequuntur
-                vitae dignissimos sequi, quod, voluptas sit dolorum libero sunt. Veritatis temporibus, accusantium vitae
+                vitae dignissimos sequi, quod, <u>Sneha is bad girl<b></b></u> voluptas sit dolorum libero sunt. Veritatis temporibus, accusantium vitae
                 repellendus porro tempore pariatur, error doloribus eius unde sunt dolor eligendi, enim obcaecati
                 sapiente distinctio vero quaerat harum suscipit? Temporibus officiis omnis quis repellendus?</p></div>
 
@@ -42,8 +43,10 @@
         <div>
             <center style="width: 51%;
             margin-left: 24%;">
-                <h3 style="font-size: 31px; margin-top: 8px;
-             "><b><u>&Sopf;.&Kopf;.&Iopf;.&Lopf;.&Lopf;.&Sopf;</u></b></h3>
+                <!-- <h3 style="font-size: 31px; margin-top: 8px;">
+                    <b><u>&Sopf;.&Kopf;.&Iopf;.&Lopf;.&Lopf;.&Sopf;</u></b></h3> -->
+                    <h3 style="font-size: 31px; margin-top: 8px; FONT-FAMILY: monospace;">
+                        <b>SKILLS</b></h3>
             </center>
             <center>
                 <img src="pp/github (1).png" width="100" height="100" alt="">
